--- a/machineTest/package.json
+++ b/machineTest/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
     "morgan": "~1.9.1",
     "node-input-validator": "^4.5.1"
